syntax = "proto3";
package protofiles;

import "google/api/annotations.proto";
import "messages.proto";


service Client {
    rpc Version(ApiVersion) returns (ApiVersion) {
        option (google.api.http) = {
            post: "/version"
            body: "*"
        };
    }

    rpc Upcheck(UpCheckResponse) returns (UpCheckResponse) {
        option (google.api.http) = {
            post: "/upcheck"
            body: "*"
        };
    }

    rpc Send(SendRequest) returns (SendResponse);

    rpc Receive(ReceiveRequest) returns (ReceiveResponse);

    rpc UpdatePartyInfo(PartyInfo) returns (PartyInfoResponse) {
        option (google.api.http) = {
            post: "/partyinfo"
            body: "*"
        };
    }

    rpc Push(PushPayload) returns (PartyInfoResponse) {
        option (google.api.http) = {
            post: "/push"
            body: "*"
        };
    }
}
