syntax = "proto3";
package protofiles;

import "google/api/annotations.proto";

message ApiVersion{
    string version = 1;
}
message UpCheckResponse{
    string message = 1;
}
message SendRequest{
    bytes payload = 1;
    string from = 2;
    repeated string to = 3;
}
message SendResponse{
    bytes key = 1;
}
message ReceiveRequest{
    bytes key = 1;
    string to = 2;
}
message ReceiveResponse{
    bytes payload = 1;
}
message PartyInfo{
    string url = 1;
    map<string, bytes> recipients = 2;
    map<string, bool> parties = 3;
}
message PartyInfoResponse{
    bytes payload = 1;
}
message EncryptedPayload{
    bytes sender = 1;
    bytes cipherText = 2;
    bytes nonce = 3;
    repeated bytes reciepientBoxes = 4;
    bytes reciepientNonce = 5;
}
message PushPayload{
    EncryptedPayload ep = 1;
    bytes encoded = 2;
}
